crates/test-files/fixtures/compile_errors/ctx_pure.fe
use std::context::Context

pub fn foo(ctx: Context) {}
